# rp2040-emulator

./: CMakeLists.txt  LICENSE  README.md
src/: intelhex.cpp  main.cpp  rp2040.cpp  uart.cpp
src/include/: bootrom.h  intelhex.h  rp2040.h  uart.h
src/include/peripherals/: peripheral.h  syscfg.h  timer.h  uart.h
src/include/utils/: assembler.h  dataview.h  time.h
src/peripherals/: peripheral.cpp  syscfg.cpp  timer.cpp  uart.cpp
src/utils/: assembler.cpp  dataview.cpp  time.cpp
test/: assembler_test.cpp  rp2040_test.cpp
